--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   {% seo %}
 
   <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="/css/main.css" type="text/css">
+  <link rel="stylesheet" href="/css/main.css?v=1" type="text/css">
 
   <script src="/js/jquery.slim.min.js"></script>
   <script src="/js/tether.min.js"></script>
