--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,28 +1,24 @@
-<header class="navbar navbar-toggleable-sm">
+<header>
+  <nav>
+    <div class="navbar-brand-toggler-wrapper">
+      <a class="navbar-brand" href="/"></a>
 
-  <nav class="nav-wrapper">
-
-    <div class="d-flex justify-content-between">
-      <a class="navbar-brand" href="/">Skylight</a>
-
-      <div id="navbar-toggler-change" class="navbar-toggler" role="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false">
+      <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false">
         <span class="sr-only">Toggle Navigation</span>
         <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
       </div>
     </div>
 
-    <div id="main-nav" class="collapse navbar-collapse justify-content-end">
+    <div id="main-nav">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/about">About</a>
-        <a class="nav-item nav-link" href="/services">Services</a>
-        <a class="nav-item nav-link" href="/work">Work</a>
-        <a class="nav-item nav-link" href="/culture">Culture</a>
-        <a class="nav-item nav-link" href="/join">Join Us</a>
-        <a class="nav-item nav-link" href="/blog">Blog</a>
-        <a class="nav-item nav-link pr-0" href="/hire-us">Hire Us</a>
+        <a href="/about"><span>About</span></a>
+        <a href="/services"><span>Services</span></a>
+        <a href="/work"><span>Work</span></a>
+        <a href="/culture"><span>Culture</span></a>
+        <a href="/join"><span>Join Us</span></a>
+        <a href="/blog"><span>Blog</span></a>
+        <a href="/hire-us"><span>Hire Us</span></a>
       </div>
     </div>
-
   </nav>
-
 </header>
