--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -4,24 +4,23 @@
 
     <div class="page-cta-hdr-wrapper ">
       <div class="page-cta-hdr">
-        <h3>Change lives every day.</h3>
+        <h3>Let's get to work.</h3>
       </div>
     </div>
 
     <div class="page-cta-content-wrapper">
       <div class="page-cta-content">
         <p>
-          We need great technologists, designers, and more to work on
-          changing how the government serves the public.
+          Have a bold idea or unsolvable problem?
+          We’d love to hear about it.
         </p>
       </div>
     </div>
 
     <div class="page-cta-btn-wrapper">
       <div class="page-cta-btn">
-        <a href="/join" role="button">
-          <span>Join Us</span>
-          <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+        <a href="/hire-us" role="button">
+          Contact Us
         </a>
       </div>
     </div>
