--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -1,21 +1,35 @@
 .about-us {
-  @include page;
+  @extend %page;
 }
 
 .about-section {
-  h2 { @extend .mb-3; }
-  .about-content p:last-child { @extend .mb-0; }
-  &:not(:last-child) { @extend .mb-3; }
+  h2 {
+    @extend .mb-3;
+  }
+
+  .about-content p:last-child {
+    @extend .mb-0;
+  }
+
+  &:not(:last-child) {
+    @extend .mb-3;
+  }
 }
 
 @include media-breakpoint-up(md) {
   .about-section {
-    &:not(:last-child) { @include mb-5; }
-    h2 { @include mb-4; }
+    &:not(:last-child) {
+      @include mb-5;
+    }
+
+    h2 {
+      @include mb-4;
+    }
   }
 }
 
-.about-subheading-wrapper, .about-content-wrapper {
+.about-subheading-wrapper,
+.about-content-wrapper {
   @extend .row;
 }
 
@@ -27,7 +41,11 @@
   @extend .col-11;
   @extend .col-md-8;
   @extend .mx-auto;
-  p { text-align: left; }
+  @extend .text;
+
+  p {
+    @extend .text-left;
+  }
 
   img {
     @extend .img-fluid;
@@ -62,7 +80,7 @@
 
 .employee-links {
   @extend .card-footer;
-  background-color: white;
+  background-color: $white;
 }
 
 .employee-name {
@@ -80,28 +98,49 @@
 .employee-bio {
   @extend .card-text;
   font-size: $font-size-sm;
-  text-align: left;
+  @extend .text-left;
 }
 
 .employee-socials {
-  a:last-child { padding-right: 10px; }
-  a:not(:first-child) { padding-left: 2px;}
+  a:last-child {
+    padding-right: 10px;
+  }
+
+  a:not(:first-child) {
+    padding-left: 2px;
+  }
 }
 
 .employee-contributions {
-  border-left: 1px solid $gray-lighter;
-  a:first-child { padding-left: 10px; }
-  a:not(:last-child) { padding-right: 2px; }
+  border-left: 1px solid $gray-lightest;
+
+  a:first-child {
+    padding-left: 10px;
+  }
+
+  a:not(:last-child) {
+    padding-right: 2px;
+  }
 }
 
 @include media-breakpoint-up(md) {
   .employee-socials {
-    a:last-child { padding-right: 15px; }
-    a:not(:first-child) { padding-left: 5px;}
+    a:last-child {
+      padding-right: 15px;
+    }
+
+    a:not(:first-child) {
+      padding-left: 5px;
+    }
   }
 
   .employee-contributions {
-    a:first-child { padding-left: 15px; }
-    a:not(:last-child) { padding-right: 5px; }
+    a:first-child {
+      padding-left: 15px;
+    }
+
+    a:not(:last-child) {
+      padding-right: 5px;
+    }
   }
 }
