added icon to page cta buttons

--- a/_includes/carry_culture_cta.html
+++ b/_includes/carry_culture_cta.html
@@ -20,7 +20,8 @@
     <div class="page-cta-btn-wrapper">
       <div class="page-cta-btn">
         <a href="/join" role="button">
-          Join Skylight
+          <span>Join Skylight</span>
+          <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
         </a>
       </div>
     </div>
