--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -20,7 +20,8 @@
     <div class="page-cta-btn-wrapper">
       <div class="page-cta-btn">
         <a href="/hire-us" role="button">
-          Contact Us
+          <span>Contact Us</span>
+          <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
         </a>
       </div>
     </div>
