initial work on services page

--- a/_includes/meet_the_team.html
+++ b/_includes/meet_the_team.html
@@ -11,7 +11,7 @@
       {% if emp.active %}
         <div class="employee">
           <div class="employee-card">
-            <img class="employee-img" src="{{emp.image_url}}" alt="{{emp.image_description}}">
+            <img class="employee-img" src="{{emp.image_path}}" alt="{{emp.image_description}}">
             <div class="employee-profile">
               <h3 class="employee-name">{{emp.full_name}}</h3>
               <h4 class="employee-position">{{emp.position}}</h4>
