--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -153,6 +153,7 @@ $jumbotron-bg: $brand-primary;
 
 // Cards
 $card-border-color: $gray-lightest;
+$card-cap-bg: $white;
 
 // Tooltips
 $tooltip-bg: $brand-primary;
