--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -1,1 +1,69 @@
-.our-services { @extend %page; }
+.our-services {
+  @extend %page;
+}
+
+.service-areas {
+  @extend .row;
+}
+
+.service-area {
+  @extend .col-md-4;
+
+  @include media-breakpoint-down(sm) {
+    &:not(:last-child) {
+      @include mb-5;
+    }
+  }
+}
+
+.service-area-card {
+  @extend .card;
+  @extend .no-border;
+  @extend .text-center;
+  height: 100%;
+}
+
+.service-area-icon {
+  @extend .card-img-top;
+  @extend .img-fluid;
+}
+
+.service-area-description {
+  @extend .card-block;
+  text-decoration: none;
+  padding: 2rem 1.25rem 1.25rem 1.25rem;
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
+  }
+
+  h3 {
+    @extend .card-title;
+    @extend .text-uppercase;
+    font-size: $font-size-md;
+    color: $brand-primary;
+
+    &:hover,
+    &:focus {
+      color: $brand-primary;
+    }
+  }
+
+  p {
+    @extend .card-text;
+    @extend .font-weight-bold;
+    color: $body-color;
+
+    &:hover,
+    &:focus {
+      color: $body-color;
+    }
+  }
+}
+
+.service-area-directional-icon {
+  @extend .card-footer;
+  @extend .no-border;
+  padding: 0rem 1.25rem;
+}
