--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -5,6 +5,8 @@
 @mixin mb-3 { margin-bottom: 1rem !important; }
 @mixin mb-4 { margin-bottom: 1.5rem !important; }
 @mixin mb-5 { margin-bottom: 3rem !important; }
+@mixin mb-6 { margin-bottom: 4rem !important; }
+@mixin mb-7 { margin-bottom: 5rem !important; }
 
 @mixin pt-3 { padding-top: 1rem !important; }
 @mixin pb-3 { padding-bottom: 1rem !important; }
@@ -99,6 +101,13 @@
   @extend .btn-sm;
   @include button-tertiary($btn-tertiary-color, $btn-tertiary-bg,
     $btn-tertiary-border, $btn-tertiary-active-color);
+}
+
+// Tables
+%table-borderless {
+  .table td, .table th {
+    border: none !important;
+  }
 }
 
 // Brand
