--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -6,14 +6,19 @@
   @extend .jumbotron;
   @extend .jumbotron-fluid;
   @extend .mb-0;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+    url("../img/buzzword-stickies.jpg");
+  background-size: cover;
 }
 
 .lp-headline-content {
   @extend .container;
   color: $jumbotron-color;
 
-  @include media-breakpoint-down(xs) {
-    .lead {
+  .lead {
+    @extend .mt-3;
+
+    @include media-breakpoint-down(xs) {
       font-size: $font-size-base;
     }
   }
@@ -21,6 +26,7 @@
 
 .lp-headline-cta-btn {
   @extend %button-primary;
+  @extend .mt-3;
 }
 
 .lp-body {
