--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -6,7 +6,7 @@
   @extend .jumbotron;
   @extend .jumbotron-fluid;
   @extend .mb-0;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("../img/buzzword-stickies.jpg");
   background-size: cover;
 }
@@ -27,6 +27,8 @@
 .lp-headline-cta-btn {
   @extend %button-primary;
   @extend .mt-3;
+  @extend .mb-sm-3;
+  @extend .mb-md-5;
 }
 
 .lp-body {
