style adjustments to jumbotron

--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="page-cta-content-wrapper">
-      <div class="page-cta-content">
+      <div class="page-cta-content-narrow">
         <p>
           Have a bold idea or unsolvable problem?
           We’d love to hear about it.
