--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -7,6 +7,7 @@
 @mixin mb-5 { margin-bottom: 3rem !important; }
 @mixin mb-6 { margin-bottom: 4rem !important; }
 @mixin mb-7 { margin-bottom: 5rem !important; }
+@mixin mb-10 { margin-bottom: 8rem !important; }
 
 @mixin pt-3 { padding-top: 1rem !important; }
 @mixin pb-3 { padding-bottom: 1rem !important; }
