--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -6,6 +6,12 @@
   @include mb-7;
 }
 
+@include media-breakpoint-up(md) {
+  .mb-md-10 {
+    @include mb-10;
+  }
+}
+
 .text {
   a {
     color: $text-link-color;
