initial work on service area pages

--- a/_includes/carry_culture_cta.html
+++ b/_includes/carry_culture_cta.html
@@ -19,7 +19,7 @@
 
     <div class="page-cta-btn-wrapper">
       <div class="page-cta-btn">
-        <a href="/join" role="button">
+        <a href="/join/" role="button">
           <span>Join Skylight</span>
           <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
         </a>
