--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,11 +8,11 @@
 
       <nav class="footer-nav">
         <ul>
-          <li><a href="/guilds">Guilds</a></li>
-          <li><a href="/guides">Guides</a></li>
-          <li><a href="/alliances">Alliances</a></li>
-          <li><a href="/press">Press</a></li>
-          <li><a href="/policies">Policies</a></li>
+          <li><a href="/guilds/">Guilds</a></li>
+          <li><a href="/guides/">Guides</a></li>
+          <li><a href="/alliances/">Alliances</a></li>
+          <li><a href="/press/">Press</a></li>
+          <li><a href="/policies/">Policies</a></li>
         </ul>
       </nav>
     </div>
