--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,13 +11,13 @@
 
     <div id="main-nav">
       <div class="navbar-nav">
-        <a href="/about"><span>About</span></a>
-        <a href="/services"><span>Services</span></a>
-        <a href="/work"><span>Work</span></a>
-        <a href="/culture"><span>Culture</span></a>
-        <a href="/join"><span>Join Us</span></a>
-        <a href="/blog"><span>Blog</span></a>
-        <a href="/hire-us"><span>Hire Us</span></a>
+        <a href="/about/"><span>About</span></a>
+        <a href="/services/"><span>Services</span></a>
+        <a href="/work/"><span>Work</span></a>
+        <a href="/culture/"><span>Culture</span></a>
+        <a href="/join/"><span>Join Us</span></a>
+        <a href="/blog/"><span>Blog</span></a>
+        <a href="/hire-us/"><span>Hire Us</span></a>
       </div>
     </div>
   </nav>
