--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -19,7 +19,7 @@
 
     <div class="page-cta-btn-wrapper">
       <div class="page-cta-btn">
-        <a href="/hire-us" role="button">
+        <a href="/hire-us/" role="button">
           <span>Contact Us</span>
           <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
         </a>
