--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -1,5 +1,6 @@
 // Spacing
 @mixin mt-5 { margin-top: 3rem !important; }
+@mixin mt-6 { margin-top: 4rem !important; }
 
 @mixin mb-0 { margin-bottom: 0 !important; }
 @mixin mb-3 { margin-bottom: 1rem !important; }
