--- a/_sass/pages/_page_cta.scss
+++ b/_sass/pages/_page_cta.scss
@@ -3,13 +3,8 @@
   color: $page-cta-color;
   @extend .text-center;
   @extend .mt-5;
-  @extend .py-3;
-}
-
-@include media-breakpoint-up(md) {
-  .page-cta {
-    @include py-5;
-  }
+  @extend .py-4;
+  @extend .py-md-5;
 }
 
 .page-cta-hdr-wrapper {
@@ -88,12 +83,20 @@
     opacity: .5;
     font-size: inherit;
   }
+
+  @include media-breakpoint-up(md) {
+    font-size: $font-size-xxxl;
+  }
 }
 
 .testimonial-cite {
   font-size: $font-size-sm;
   line-height: 1.5;
   font-style: normal;
+
+  @include media-breakpoint-up(md) {
+    font-size: $font-size-lg;
+  }
 }
 
 .testimonial-author,
@@ -104,14 +107,4 @@
 
 .testimonial-author:before {
   content: "— ";
-}
-
-@include media-breakpoint-up(md) {
-  .testimonial-quote {
-    font-size: $font-size-xxxl;
-  }
-
-  .testimonial-cite {
-    font-size: $font-size-lg;
-  }
 }
